// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render action text when using action-text prop 1`] = `
<div
  class="mi-search__action"
  role="button"
  tabindex="0"
>
  Custom Text
</div>
`;

exports[`should render label slot correctly 1`] = `"<label class="mi-search__label" for="mi-search-input">Custom Label</label>"`;

exports[`should render left icon when using left-icon prop 1`] = `
<div class="mi-field__left-icon">
  <i class="mi-badge__wrapper mi-icon mi-icon-setting-o">
  </i>
</div>
`;

exports[`should render left slot correctly 1`] = `
<div class="mi-search">
  Custom Left Content
  <div class="mi-search__content mi-search__content--square">
    <div class="mi-cell mi-cell--borderless mi-field mi-search__field">
      <div class="mi-field__left-icon">
        <i class="mi-badge__wrapper mi-icon mi-icon-search">
        </i>
      </div>
      <div class="mi-cell__value mi-field__value">
        <div class="mi-field__body">
          <input
            type="search"
            id="mi-search-input"
            class="mi-field__control"
          >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render right icon when using right-icon prop 1`] = `
<div class="mi-field__right-icon">
  <i class="mi-badge__wrapper mi-icon mi-icon-setting-o">
  </i>
</div>
`;

exports[`should render right-icon slot correctly 1`] = `
<div class="mi-field__right-icon">
  Custom Right Icon
</div>
`;
